--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1409,9 +1409,6 @@ textarea {
         -ms-flex-direction: column;
             flex-direction: column;
   }
-  .my-introduction-heading .space-unicode {
-    display: none;
-  }
   .my-introduction-heading h1 {
     font-size: 11rem;
     margin-top: -3rem;
@@ -1425,7 +1422,7 @@ textarea {
     margin-left: 3.5rem;
   }
   .about {
-    margin-top: -50rem;
+    margin-top: -30rem;
   }
   .about-main-heading {
     margin-left: 3.8rem !important;
@@ -1438,21 +1435,17 @@ textarea {
     width: 650px;
   }
   .my-photo-positioning {
-    margin-left: 4rem;
+    margin-left: -3rem;
+    margin-top: 25rem;
   }
-  .experiences-left-side {
-    width: 100%;
-  }
-  .experiences-right-side {
+  .experiences-media-hiding-icon > .experiences-right-side {
     display: none;
   }
   .experiences {
     margin-bottom: 16rem;
   }
-  .experiences-main-heading {
-    margin-left: -.2rem;
-    word-break: break-all;
-    line-height: .78;
+  .experiences .experiences-left-side {
+    width: 100%;
   }
   .projects {
     margin-bottom: 18rem;
@@ -1485,8 +1478,10 @@ textarea {
   }
   .contact-main-heading {
     overflow: hidden;
-    line-height: .8;
     margin-left: -3rem;
+  }
+  #side-navbar {
+    width: 100%;
   }
 }
 
@@ -1495,7 +1490,7 @@ textarea {
     right: -.5rem;
   }
   #side-navbar {
-    width: 50%;
+    width: 100%;
   }
   .about {
     margin-top: -40rem;
@@ -1543,12 +1538,6 @@ textarea {
 }
 
 @media only screen and (min-height: 1112px) and (max-width: 834px) {
-  #side-navbar {
-    width: 100% !important;
-  }
-  .about {
-    margin-top: -38rem;
-  }
   .positioning-about-main-heading {
     width: 350px;
   }
@@ -1561,25 +1550,6 @@ textarea {
   }
   .my-photo-positioning {
     margin-left: 1rem;
-  }
-}
-
-@media only screen and (min-height: 1112px) {
-  .experiences {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-  .experiences-main-heading {
-    word-break: normal;
-    -webkit-transform: rotate(180deg);
-            transform: rotate(180deg);
-    -webkit-writing-mode: vertical-lr;
-        -ms-writing-mode: tb-lr;
-            writing-mode: vertical-lr;
   }
 }
 
