--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1447,6 +1447,23 @@ textarea {
   .experiences .experiences-left-side {
     width: 100%;
   }
+  .experiences {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .experiences-main-heading {
+    word-break: normal;
+    -webkit-transform: rotate(180deg);
+            transform: rotate(180deg);
+    -webkit-writing-mode: vertical-lr;
+        -ms-writing-mode: tb-lr;
+            writing-mode: vertical-lr;
+    margin-left: -1rem;
+  }
   .projects {
     margin-bottom: 18rem;
   }
