Slowly solving issues with responsivness

--- a/src/styles/_about.scss
+++ b/src/styles/_about.scss
@@ -5,24 +5,25 @@
   transition: 1s;
 }
 
-.about:hover {
-  margin-left: 2.9rem;
-  transition: 1s;
-  // cursor: pointer;
-}
+// .about:hover {
+//   margin-left: 2.9rem;
+//   transition: 1s;
+//   // cursor: pointer;
+// }
 
 .about-main-heading {
-  font-size: 8rem;
+  font-size: 13rem;
   letter-spacing: .3rem;
   text-transform: uppercase;
   transform: rotate(180deg);
   writing-mode: vertical-lr;
   text-align: center;
-  line-height: .2;
+  // line-height: .2;
   font-family: "didot";
   transition: .4s;
   opacity: .4;
   animation: open 4s ease-in-out;
+  margin-left: -2.9rem;
 }
 
 .about-main-container {
