--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -160,9 +160,9 @@
     }
   }
 
-  // details summary {
-  //   border-color:rgb(114, 0, 0)
-  // }
+  .fill-svg {
+    fill: antiquewhite;
+  }
 }
 
 
