--- a/src/styles/_experiences.scss
+++ b/src/styles/_experiences.scss
@@ -9,14 +9,10 @@
 /* ! Experiences & Education */
 .experiences {
   min-height: 100vh;
-  // display: flex;
-  // flex-direction: column;
 }
 
 .experiences-main-heading, .contact-main-heading {
   font-size: 8rem;
-  // writing-mode: initial !important;
-  // transform: rotate(360deg) !important;
   letter-spacing: .3rem;
   text-transform: uppercase;
   text-align: center;
@@ -29,14 +25,18 @@
   opacity: .1;
   margin-top: 4.2rem;
   text-align: right;
-  // margin-right: 10rem;
 }
 
 .experiences-education-wannabe-table {
-  display: flex;
   width: 80%;
   min-height: 500px;
   margin: 4rem auto;
+}
+
+.experiences-media-left-side {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .experiences-left-side {
@@ -92,25 +92,26 @@
 
 .experiences-right-side {
   display: flex;
-  align-items: center;
+  // align-items: center;
   margin: 0 auto;
-  .work-experiences-icons {
+  svg.work-experiences-icons {
     width: 300px;
     height: 300px;
-    background: url('../images/SVGIcons/work.svg');
-    background-size: 300px;
-    opacity: 0;
-    transition: 4s;
+    opacity: .4;
+    // background: url('../images/SVGIcons/work.svg');
+    // background-size: 300px;
+    // opacity: 0;
+    // transition: 4s;
   }
 }
 
-.experiences-right-side:hover,
-.experiences-right-side:active {
-  .work-experiences-icons {
-    opacity: .5;
-    animation: open 4s ease-in-out;
-  }
-}
+// .experiences-right-side:hover,
+// .experiences-right-side:active {
+//   .work-experiences-icons {
+//     opacity: .5;
+//     animation: open 4s ease-in-out;
+//   }
+// }
 
 .experience-sign {
   visibility: hidden;
