--- a/src/styles/_media-query.scss
+++ b/src/styles/_media-query.scss
@@ -212,7 +212,7 @@
     margin-top: 10rem;
     opacity: .05 !important;
     z-index: -1;
-    margin-left: 1.5rem !important;
+    margin-left: -3.2rem;
     color: rgba(0,0,0,.5);
   }
 
@@ -244,9 +244,9 @@
 
   .projects-main-heading {
     font-size: 13rem;
-    line-height: .35;
     opacity: .05;
     z-index: -1;
+    margin-left: -3.1rem;
   }
 
   // ? Projects section
@@ -320,18 +320,6 @@
     opacity: 1;
   }
 
-  .disabled {
-    pointer-events: none;
-    // margin-left: 2.9rem;
-    // h1 {
-    //   opacity: .2;
-    // }
-  }
-
-  .projects-media-query-hover {
-    margin-left: 2.9rem;
-  }
-
   .toggle-button-position {
     button {
       margin-top: 3.5vh;
@@ -366,8 +354,8 @@
     margin-top: -30rem;
   }
 
-  .about-main-heading {
-    margin-left: 3.8rem !important;
+  .about-main-container {
+    margin-left: -12rem;
   }
 
   .positioning-about-main-heading {
@@ -388,30 +376,25 @@
 
   // ? Experience page
 
-
-  .experiences-media-hiding-icon > .experiences-right-side {
-    display: none;
-  }
-
-  .experiences {
-    margin-bottom: 16rem;
-    .experiences-left-side {
-      width: 100%;
-    }
-  }
-
-
   .experiences {
     display: flex;
     align-items: center;
+    margin-bottom: 16rem;
+    .experiences-left-side {
+      width: 108%;
+      margin-left: -8rem;
+    }
   }
 
   .experiences-main-heading {
     word-break: normal;
-    // font-size: 14rem;
     transform: rotate(180deg);
     writing-mode: vertical-lr;
     margin-left: -1rem;
+  }
+
+  svg.work-experiences-icons {
+    display: none;
   }
 
 
@@ -419,6 +402,10 @@
 
   .projects {
     margin-bottom: 18rem;
+  }
+
+  #projects.projects-main-heading {
+    margin-left: -3.4rem;
   }
 
   .accordion-text {
@@ -441,20 +428,43 @@
 
   .project-details-width {
     margin-bottom: 1rem;
-    margin-left: -.8rem;
+    margin-left: -8rem;
+    width: 75%;
   }
 
   // ? Contact page
 
+  .contacts {
+    margin-left: 1.8rem;
+  }
+
+  .container-contact {
+    margin-left: -8rem;
+    width: 600px;
+  }
+
   .contact-main-heading {
-    overflow: hidden;
-    margin-left: -3rem;
+    word-break: normal;
+    // font-size: 14rem;
+    transform: rotate(180deg);
+    writing-mode: vertical-lr;
+  }
+
+  .positioning-contact-form-media-query {
+    display: flex;
   }
 
   // ? Side navbar
 
   #side-navbar {
     width: 100%;
+  }
+
+  // ? Footer
+
+  .footer {
+    margin-top: 4rem;
+    margin-bottom: 2rem;
   }
 
 }
@@ -634,23 +644,241 @@
     .my-photo-positioning {
       margin-left: 1rem;
     }
+
+  }
+
+} 
+
+// ! max-width: 800px
+
+@media only screen and (width: 800px) {
+
+  // ? Side navbar
+
+  #side-navbar {
+    width: 100%;
+  }
+
+  // ? Home section
+
+  .my-introduction-heading {
+    h1 {
+      font-size: 10rem;
+    }
+    h2 {
+      font-size: 4.3rem;
+    }
+  }
+
+  // ? About section
+
+  .my-photo-positioning {
+    margin-left: -4rem;
+    margin-top: 26rem;
+  }
+
+  .positioning-brand-statement-paragraph {
+    width: 600px;
+  }
+
+  img.my-photo {
+    width: 300px;
   }
 
   // ? Experience 
 
-  // .experiences {
-  //   display: flex;
-  //   align-items: center;
-  // }
+  .experiences {
+    display: flex;
+    align-items: center;
+    h2.experiences-main-heading {
+      margin-left: -.5rem;
+      word-break: normal;
+      font-size: 14rem;
+      transform: rotate(180deg);
+      writing-mode: vertical-lr;
+    }
+    .experiences-left-side {
+      width: 109%;
+      margin-left: -9.3rem;
+    }
+  }
 
-  // .experiences-main-heading {
-  //   word-break: normal;
-  //   // font-size: 14rem;
-  //   transform: rotate(180deg);
-  //   writing-mode: vertical-lr;
-  // }
-} 
+  .container-contact {
+    width: 600px;
+  }
 
+  // ? Footer
+
+  .footer {
+    margin-top: 7rem;
+  }
+}
+
+
+// ! max-width: 768px (height 1024px) - iPad Mini  / iPad
+
+@media only screen and (min-height: 1024px) {
+  @media only screen and (max-width: 768px){ 
+
+    .toggle-button-position {
+      button {
+        margin-top: 6vh;
+      }
+    }
+
+    // ? Home section
+
+    .my-introduction-heading {
+      h1 {
+        font-size: 10rem;
+      }
+    }
+
+    // ? About section
+
+    p.positioning-brand-statement-paragraph {
+      width: 600px;
+    }
+
+    img.my-photo-positioning {
+      margin-top: 26rem;
+      margin-left: -7rem;
+    }
+
+    // ? Experience 
+
+    .experiences {
+      display: flex;
+      align-items: center;
+      h2.experiences-main-heading {
+        margin-left: -.7rem;
+        word-break: normal;
+        font-size: 13rem;
+        transform: rotate(180deg);
+        writing-mode: vertical-lr;
+      }
+      .experiences-left-side {
+        width: 109%;
+        margin-left: -8.6rem;
+      }
+    }
+
+    // ? Projects
+
+    .project-details-width {
+      margin-left: -8.4rem;
+    }
+
+    // ? Contacts
+
+    .contacts-media-query-smaller-devices {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      .contact-main-heading {
+        word-break: normal;
+        transform: rotate(180deg);
+        writing-mode: vertical-lr;
+        margin-left: -.1rem;
+      }
+    }
+
+    .container-contact {
+      width: 600px;
+      margin-left: -8.4rem;
+    }
+
+    // ? Footer
+
+    .footer {
+      margin-top: 4rem;
+    }
+
+  }
+}
+
+
+// ! max-width: 600px
+
+@media only screen and (max-width: 600px) {
+
+  // ? Home section
+
+  .my-introduction-heading {
+    h1 {
+      font-size: 7rem;
+    }
+    h2 {
+      font-size: 3.5rem;
+    }
+  }
+
+  // ? About section
+
+  .about {
+    margin-top: -33rem;
+  }
+
+  .my-photo-positioning {
+    margin-left: -13rem;
+    margin-top: 29rem;
+  }
+
+  .positioning-brand-statement-paragraph {
+    margin-top: 2rem;
+    width: 450px;
+  }
+
+  .my-photo {
+    width: 250px;
+  }
+
+  // ? Experience 
+
+  .experiences {
+    display: flex;
+    align-items: center;
+    .experiences-left-side {
+      width: 125%;
+      margin-left: -8.6rem;
+    }
+  }
+
+  .text {
+    font-size: 18px;
+  }
+
+  .container {
+    margin: .5rem;
+  }
+
+  .skills-positioning-container {
+    width: 85%;
+  }
+
+  // ? Projects
+
+  .project-details-width {
+    margin-left: -3.3rem;
+    .project-images-resize {
+      width: 450px;
+    }
+  }
+
+  // ? Contacts
+
+  .container-contact {
+    width: 600px;
+    margin-left: -5.3rem;
+  }
+
+  // ? Footer
+
+  .footer {
+    margin-top: 7rem;
+  }
+
+}
 
 
 
